adding all the css

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </p>
             </div>
 
-            <form class="quiz-form">
+            <form class="quiz-form ">
                 <div class="qustion">
                     <p>1 Lorem ipsum dolor sit amet.</p>
                     <div class="option">
@@ -45,7 +45,7 @@
                 </div>
 
 
-                <div class="qustion">
+                <div class="qustion ">
                     <p>2 Lorem ipsum dolor sit amet.</p>
                     <div class="option">
                         <input type="radio" name="q2" value="A" checked>
@@ -140,7 +140,9 @@
                         <label for="">D</label>
                     </div>
                 </div>
-
+                <div id="submit">
+                    <input type="submit" value="Submit">
+                </div>
             </form>
         </section>
     </main>
